<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >

    <RelativeLayout
        android:id="@+id/rl_headBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorMain">

        <com.example.buiderdream.programmercommunity.widgets.RoundImageView
            android:id="@+id/img_userHead"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:src="@drawable/splash1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/person_center"
            android:textColor="#ffffff"
            android:textSize="@dimen/title_font" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_head_module"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@mipmap/img_personal_background_352px">

        <com.example.buiderdream.programmercommunity.widgets.RoundImageView
            android:id="@+id/img_userHeadMax"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:scaleType="fitXY"
            android:src="@drawable/splash0" />

        <TextView
            android:id="@+id/tv_personal_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_userHeadMax"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/user_no_login"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_personal_introduce"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tv_personal_nickname"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="10dp"
            android:lines="3"
            android:maxLength="38"
            android:text=""
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
        android:id="@+id/btn_compile"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/img_userHeadMax"
        android:layout_marginEnd="15dp"
        android:background="@drawable/bg_tv_shape_20"
        android:text="@string/compile"
        android:textColor="@color/white"
        android:textSize="18sp" />
        <Button
            android:id="@+id/btn_login"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/img_userHeadMax"
            android:layout_marginEnd="15dp"
            android:background="@drawable/bg_tv_shape_20"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_above="@+id/tv_personal_nickname"
            android:layout_alignStart="@+id/btn_compile"
            android:background="@drawable/bg_tv_shape_20"
            android:text="@string/exit"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.ogaclejapan.smarttablayout.SmartTabLayout
            android:id="@+id/vp_mine_tab"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/colorAssistant"
            app:stl_clickable="true"
            app:stl_defaultTabBackground="?attr/selectableItemBackground"
            app:stl_defaultTabTextAllCaps="true"
            app:stl_defaultTabTextColor="#fff"
            app:stl_defaultTabTextHorizontalPadding="16dp"
            app:stl_defaultTabTextMinWidth="0dp"
            app:stl_defaultTabTextSize="15sp"
            app:stl_distributeEvenly="true"
            app:stl_dividerColor="#4D000000"
            app:stl_dividerThickness="0dp"
            app:stl_drawDecorationAfterTab="false"
            app:stl_indicatorAlwaysInCenter="false"
            app:stl_indicatorColor="@color/maroon"
            app:stl_indicatorCornerRadius="13dp"
            app:stl_indicatorGravity="center"
            app:stl_indicatorInFront="false"
            app:stl_indicatorInterpolation="smart"
            app:stl_indicatorThickness="25dp"
            app:stl_indicatorWidth="auto"
            app:stl_indicatorWithoutPadding="false"
            app:stl_overlineColor="#4D000000"
            app:stl_overlineThickness="0dp"
            app:stl_titleOffset="24dp"
            app:stl_underlineColor="#4D000000"
            app:stl_underlineThickness="1dp"/>

        <android.support.v4.view.ViewPager
            android:id="@+id/vp_userCollection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
          />
    </LinearLayout>

</LinearLayout>
